# Claude-Codex-Pro-Tool

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MAINTAINERS.md  README.md  README_EN.md  RULES.md
.codegraph/: daemon.pid
.playwright-cli/: page-2026-06-28T04-06-35-914Z.yml  page-2026-06-28T04-06-46-368Z.yml  page-2026-07-10T11-30-42-803Z.yml  page-2026-07-10T11-35-05-965Z.yml  page-2026-07-10T13-04-53-511Z.yml
Theme/: README.md
acceptance/: about-update-download-experience.md  claude-desktop-proxy-upstream-models.md  claude-dev-mode-additive-profile-write.md  claude-dev-mode-config-load-failure.md  claude-inspector-status-readiness.md  claude-launch-inspector-readiness.md  claude-plugin-marketplace-visibility-fix.md  claude-repair-action.md  claude-session-management.md  claude-white-screen-diagnostics.md  claude-zh-patch-elevated-hang-and-locale-fix.md  codebase-audit-remediation.md  codex-api-model-select-injection.md  codex-credential-environment-conflict.md  codex-frontend-repair-status-consistency.md  codex-injection-content-boundary.md  codex-injection-control-deck-redesign.md  codex-injection-popup-comic-ui.md  codex-injection-status-visibility-and-modal-close.md  codex-product-design-skill-marketplace-autoregister.md  codex-restart-command-relaunch.md  codex-session-context-viewer.md  codex-theme-center.md  codex-third-party-plugin-repository.md  codex-update-and-injection-regressions.md  contact-entrypoints.md  context-manager-tabs-toggle-layout.md  cross-platform-release-privacy-review.md  cross-user-app-discovery.md  english-readme.md  fix-codex-theme-line-ending-ci-regression.md  fix-service-tier-injection-ci-regression.md  fix-stale-helper-port-status.md  fix-stale-provider-sync-lock-and-status.md  fix-windows-installer-mcp-staging.md  fix-windows-private-file-console-flash.md  fix-windows-subsystem-ui-regression-tests.md  github-release-assets.md  github-windows-ci-regression.md  github-windows-session-test-isolation.md  (+46 more)
apps/claude-codex-pro-launcher/: Cargo.toml  build.rs
apps/claude-codex-pro-launcher/src/: main.rs
apps/claude-codex-pro-launcher/tests/: launcher_source_contract.rs
apps/claude-codex-pro-manager/src-tauri/: Cargo.toml  tauri.conf.json
apps/claude-codex-pro-manager/src-tauri/capabilities/: default.json
apps/claude-codex-pro-manager/src-tauri/src/: commands.rs  install.rs  lib.rs  main.rs
apps/claude-codex-pro-manager/src-tauri/tests/: windows_subsystem.rs
apps/claude-codex-pro-mcp/: Cargo.toml
apps/claude-codex-pro-mcp/src/: main.rs
crates/claude-codex-pro-core/: Cargo.toml
crates/claude-codex-pro-core/src/: ads.rs  app_paths.rs  assets.rs  bridge.rs  claude_desktop.rs  claude_desktop_provider.rs  claude_provider.rs  claude_sessions.rs  claude_zh_patch.rs  cli_wrapper.rs  codex_plugin_marketplace.rs  codex_theme.rs  computer_use_guard.rs  credential_environment.rs  diagnostic_log.rs  helper_auth.rs  http_client.rs  install_registration.rs  launcher.rs  lib.rs  memory_assist.rs  model_catalog.rs  paths.rs  plugin_hub.rs  ports.rs  protocol_proxy.rs  relay_config.rs  relay_switch.rs  routes.rs  script_market.rs  settings.rs  status.rs  system_prompt.rs  unified_tool_inventory.rs  update.rs  user_scripts.rs  version.rs  watcher.rs  windows_integration.rs  zed_remote.rs
crates/claude-codex-pro-core/src/install/: macos.rs  mod.rs  windows.rs
crates/claude-codex-pro-core/src/upstream_worktree/: git.rs
crates/claude-codex-pro-core/src/upstream_worktree/remote/: tests.rs
crates/claude-codex-pro-core/tests/: ads.rs  bridge_routes.rs  cdp_bridge.rs  claude_desktop_provider.rs  claude_provider.rs  cli_wrapper.rs  credential_environment.rs  install_registration.rs  installers.rs  launcher.rs  memory_assist.rs  model_catalog.rs  protocol_proxy.rs  relay_config.rs  relay_switch.rs  supplier_target_routing.rs  unified_tool_inventory.rs  updater.rs  upstream_worktree.rs  watcher.rs  zed_remote.rs
crates/claude-codex-pro-data/: Cargo.toml
crates/claude-codex-pro-data/src/: lib.rs  markdown.rs  provider_sync.rs  session_migration.rs  storage.rs
crates/claude-codex-pro-data/tests/: markdown.rs  provider_sync.rs  storage_adapter.rs
crates/claude-codex-pro-data/tests/fixtures/: session-context-real-shape.jsonl
design/: audit.md  context.md  ideate.md  manager-interface-redesign-qa.md  qa.md
docs/: code-knowledge-graph.json  code-knowledge-graph.md  full-code-review.md  harness-engineering-theory.md  worktree-dirty-inventory.md
examples/: openrouter-config-example.json
spec/: about-update-download-experience.md  claude-desktop-proxy-upstream-models.md  claude-dev-mode-additive-profile-write.md  claude-dev-mode-config-load-failure.md  claude-inspector-status-readiness.md  claude-launch-inspector-readiness.md  claude-plugin-marketplace-visibility-fix.md  claude-repair-action.md  claude-session-management.md  claude-white-screen-diagnostics.md  claude-zh-patch-elevated-hang-and-locale-fix.md  codebase-audit-remediation.md  codex-api-model-select-injection.md  codex-credential-environment-conflict.md  english-readme.md  (+70 more)
(+86 files in other folders)
