[workspace]
resolver = "2"
members = [
  "crates/claude-codex-pro-core",
  "crates/claude-codex-pro-data",
  "apps/claude-codex-pro-launcher",
  "apps/claude-codex-pro-manager/src-tauri",
  "apps/claude-codex-pro-mcp",
]

[workspace.package]
version = "1.2.9"
edition = "2024"
license-file = "LICENSE"
repository = "https://github.com/DamonZS/Claude-Codex-Pro-Tool"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
directories = "6"
fs2 = "0.4"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "system-proxy"], default-features = false }
rmcp = { version = "2.1", features = ["server", "macros", "transport-io"] }
rusqlite = { version = "0.32", features = ["bundled"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "time"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
toml = "0.8"
toml_edit = "0.22"
url = "2"
uuid = { version = "1", features = ["v4"] }
winresource = "0.1"
zip = { version = "2", default-features = false, features = ["deflate"] }
