[package]
name = "claude-codex-pro-launcher"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "claude-codex-pro-plus"
path = "src/main.rs"
test = false

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
claude-codex-pro-core = { path = "../../crates/claude-codex-pro-core" }
claude-codex-pro-data = { path = "../../crates/claude-codex-pro-data" }
directories.workspace = true
serde_json.workspace = true
tokio.workspace = true

[build-dependencies]
winresource.workspace = true
