[package]
name = "claude-codex-pro-mcp"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[[bin]]
name = "claude-codex-pro-mcp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
claude-codex-pro-core = { path = "../../crates/claude-codex-pro-core" }
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
