[package]
name = "claude-codex-pro-manager"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[lib]
name = "claude_codex_pro_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "claude-codex-pro-manager"
path = "src/main.rs"
test = false

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
claude-codex-pro-core = { path = "../../../crates/claude-codex-pro-core" }
claude-codex-pro-data = { path = "../../../crates/claude-codex-pro-data" }
directories.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = ["custom-protocol", "tray-icon"] }
tauri-plugin-dialog = "2"
tokio.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
rusqlite.workspace = true
tempfile.workspace = true
